--- a/locale/be/LC_MESSAGES/django.po
+++ b/locale/be/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-18 14:00+0300\n"
+"POT-Creation-Date: 2023-04-17 18:13+0300\n"
 "PO-Revision-Date: 2022-10-31 18:40+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -26,9 +26,10 @@ msgstr "Рэгіён"
 msgid "Государство"
 msgstr "Дзяржава"
 
+#. Last modified by Felix Kauffman, id 19
 #: bill/models/change_taxes.py:38
 msgid "Финансирование"
-msgstr "Фінансаваньне"
+msgstr "Фінансаванне"
 
 #: bill/models/change_taxes.py:39 bill/models/explore_resources.py:26
 #: bill/models/geological_surveys.py:27
@@ -539,11 +540,12 @@ msgstr "Скасаваць вывучэньне навыка"
 msgid "Отмена"
 msgstr "Скасаваць"
 
+#. Last modified by Felix Kauffman, id 19
 #: party/templates/party/redesign/manage.html:351
 #: player/templates/player/redesign/new_player.html:136
 #: player/templates/player/redesign/profile.html:360
 msgid "Загрузить"
-msgstr "Запампаваць"
+msgstr "Загрузіць"
 
 #: party/templates/party/redesign/new_party.html:15
 #: party/views/management/new_party.py:83
@@ -832,17 +834,21 @@ msgctxt "party_view"
 msgid "подать заявку"
 msgstr "недаступна"
 
+#. Last modified by Felix Kauffman, id 19
 #: party/templates/primaries/primaries.html:25
 msgid "primaries_in_party"
-msgstr "Праймарыс у партыі"
+msgstr ""
 
-#: party/views/lists/region_parties.py:86 party/views/lists/state_parties.py:40
+#. Last modified by Felix Kauffman, id 19
+#: party/views/lists/region_parties.py:86
+#: party/views/lists/state_parties.py:40
 msgid "Партии региона"
-msgstr "Партыі рэгіёну"
+msgstr "Партыі рэгіёна"
 
+#. Last modified by Felix Kauffman, id 19
 #: party/views/lists/world_parties.py:87
 msgid "Партии мира"
-msgstr "Партыі сусьвету"
+msgstr "Партыі свету"
 
 #: party/views/management/new_party.py:44
 #, fuzzy
@@ -1361,12 +1367,16 @@ msgstr "Узнагароды падзеі:"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
-msgid "Заполняется расходованием энергии, как и ежедневное финансирование, и зависит только от твоих личных усилий."
+msgid ""
+"Заполняется расходованием энергии, как и ежедневное финансирование, и "
+"зависит только от твоих личных усилий."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
-msgid "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один из трёх этапов зимней прогрессионой рамки аватара."
+msgid ""
+"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один"
+" из трёх этапов зимней прогрессионой рамки аватара."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:395
@@ -1384,12 +1394,16 @@ msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
-msgid "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь соответствующий этап личной."
+msgid ""
+"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь"
+" соответствующий этап личной."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
-msgid "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы получить свою награду"
+msgid ""
+"Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
+"получить свою награду"
 msgstr ""
 
 #: player/templates/player/redesign/lists/skill_top.html:26
@@ -1482,9 +1496,10 @@ msgstr "Нікнэйм"
 msgid "Аватар"
 msgstr "Аватар"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/new_player.html:48
 msgid "Часовой пояс"
-msgstr "Часавы пас"
+msgstr "Часавы пояс"
 
 #: player/templates/player/redesign/overview.html:34
 msgid "обзор"
@@ -1494,9 +1509,10 @@ msgstr "агляд"
 msgid "чат"
 msgstr "чат"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/overview.html:66
 msgid "мир"
-msgstr "сусьвет"
+msgstr "свет"
 
 #: player/templates/player/redesign/overview.html:115
 msgid "независимый регион"
@@ -1575,12 +1591,13 @@ msgctxt "overview"
 msgid "магазин"
 msgstr "крама"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/overview_skills.html:23
 #: player/templates/player/redesign/overview_skills.html:72
 #: player/templates/player/redesign/overview_skills.html:121
 #: player/templates/player/redesign/overview_skills.html:185
 msgid "Завершение"
-msgstr "Завяршэньне"
+msgstr "Завяршэнне"
 
 #: player/templates/player/redesign/overview_skills.html:51
 #: player/templates/player/redesign/overview_skills.html:100
@@ -1627,9 +1644,10 @@ msgctxt "skill_cancel"
 msgid "Изучение навыка будет отменено. Продолжить?"
 msgstr "Вывучэньне навыка будзе скасавана. Падцьвердзіць?"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/overview_skills.html:178
 msgid "Продолжить"
-msgstr "Падцьвердзіць"
+msgstr "Пацвердзіць"
 
 #: player/templates/player/redesign/player_repost.html:4
 msgctxt "repost"
@@ -1731,6 +1749,7 @@ msgctxt "profile"
 msgid "не активен"
 msgstr "не актыўны"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templates/player/redesign/profile.html:187
 #: player/templates/player/redesign/view_profile.html:76
 msgctxt "profile"
@@ -1886,6 +1905,7 @@ msgstr ""
 msgid "since"
 msgstr ""
 
+#. Last modified by Felix Kauffman, id 19
 #: player/templatetags/redesign/skill_top/endurance_top.py:46
 #: player/templatetags/redesign/skill_top/endurance_top.py:47
 #: player/templatetags/redesign/skill_top/knowledge_top.py:46
@@ -1894,7 +1914,7 @@ msgstr ""
 #: player/templatetags/redesign/skill_top/power_top.py:47
 #: player/views/lists/cash_top.py:73 player/views/lists/cash_top.py:74
 msgid "Место"
-msgstr ""
+msgstr "Месца"
 
 #: player/templatetags/redesign/skill_top/endurance_top.py:64
 #: player/templatetags/redesign/skill_top/endurance_top.py:65
@@ -1986,27 +2006,32 @@ msgctxt "wallet"
 msgid "Описание"
 msgstr "Абсталяваньне"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_back_allow.py:41
-#: player/views/change_wiki_hide_allow.py:41 player/views/full_auto_allow.py:41
+#: player/views/change_wiki_hide_allow.py:41
+#: player/views/full_auto_allow.py:41
 msgid "Некорректное значение"
-msgstr "Некарэктнае значэньне"
+msgstr "Некарэктнае значэнне"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_back_allow.py:42 player/views/change_back_allow.py:58
 msgid "Настройка партийного фона"
-msgstr "Налады партыйнай асноведзі"
+msgstr "Налады партыйнага фона"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_back_allow.py:57
-#: player/views/change_wiki_hide_allow.py:57 player/views/full_auto_allow.py:57
-#: player/views/set_language.py:54 player/views/set_timezone.py:43
-#: region/views/cancel_auto.py:35 region/views/retrieve_cash.py:42
-#: region/views/start_auto.py:78
+#: player/views/change_wiki_hide_allow.py:57
+#: player/views/full_auto_allow.py:57 player/views/set_language.py:54
+#: player/views/set_timezone.py:43 region/views/cancel_auto.py:35
+#: region/views/retrieve_cash.py:42 region/views/start_auto.py:78
 msgid "Ошибка метода"
-msgstr "Памылка мэтаду"
+msgstr "Памылка метаду"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/change_wiki_hide_allow.py:42
 #: player/views/change_wiki_hide_allow.py:58
 msgid "Скрыть кнопку Wiki"
-msgstr ""
+msgstr "Схаваць кнопку Вікі"
 
 #: player/views/color_change.py:30
 #, fuzzy
@@ -2015,23 +2040,31 @@ msgctxt "profile"
 msgid "Некорректный код фона игры"
 msgstr "Некарэктны запрос"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:31 player/views/color_change.py:43
 #: player/views/color_change.py:55 player/views/color_change.py:67
+#| msgid "Некорректный запрос"
 msgctxt "profile"
 msgid "Некорректный код цвета"
 msgstr "Некарэктны код коллеру"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:42
+#| msgid "Некорректный запрос"
 msgctxt "profile"
 msgid "Некорректный код блоков игры"
 msgstr "Некарэктны код блокаў гульні"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:54
+#| msgid "Некорректное значение"
 msgctxt "profile"
 msgid "Некорректный код текста игры"
 msgstr "Некарэктны код тэксту гульні"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/color_change.py:66
+#| msgid "Некорректный запрос"
 msgctxt "profile"
 msgid "Некорректный код акцентов игры"
 msgstr "Некарэктны код акцэнтаў гульні"
@@ -2047,35 +2080,40 @@ msgstr "Некарэктны запрос"
 msgid "Десять минут ещё не прошло"
 msgstr "Дзесяць хвілін яшчэ не прайшлі"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/expense_energy.py:29 player/views/expense_energy.py:52
 #: player/views/expense_energy.py:61 player/views/expense_energy.py:72
 msgid "Пополнение энергии"
-msgstr "Папаўненьне энэргіі"
+msgstr "Папаўненне энэргіі"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/expense_energy.py:51
 msgid "Пополнение энергии не требуется"
-msgstr "Папаўненьне энэргіі не патрабуецца"
+msgstr "Папаўненне энэргіі не патрабуецца"
 
 #: player/views/expense_energy.py:60
 msgid "Недостаточно Энергетиков. Создайте их в Хранилище Склада"
 msgstr "Недастаткова Энэргетыкаў. Стварыце іх у кладоўні"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/expense_energy.py:71
 msgid "Ошибка типа запроса"
-msgstr "Памылка тыпу запросу"
+msgstr "Памылка тыпу запроса"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/full_auto_allow.py:42 player/views/full_auto_allow.py:58
 msgid "Энергетики в авто-добыче"
-msgstr ""
+msgstr "Энергетыкі ў аўта-здабычы"
 
 #: player/views/game_event/new_year.py:57
 msgctxt "game_event_ny"
 msgid "С новым годом!"
 msgstr ""
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/lists/cash_top.py:94
 msgid "Герб"
-msgstr ""
+msgstr "Герб"
 
 #: player/views/lists/cash_top.py:109
 msgid "Топ богатейших"
@@ -2089,12 +2127,12 @@ msgstr "Грамадзяне рэгіёна"
 msgid "Население региона"
 msgstr "Насельніцтва рэгіёну"
 
+#. Last modified by Felix Kauffman, id 19
 #: player/views/lists/skill_top.py:21
-#, fuzzy
 #| msgctxt "profile"
 #| msgid "характеристики"
 msgid "Топ по характеристикам"
-msgstr "характэрыстыкі"
+msgstr "Топ па характарыстыкам"
 
 #: player/views/lists/world_players.py:57
 msgid "Мировое население"
@@ -3381,7 +3419,9 @@ msgstr "Папаўненьне энэргіі"
 
 #: storage/templates/storage/redesign/storage.html:258
 msgctxt "storage_upgrade"
-msgid "Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена"
+msgid ""
+"Выберите товары в каждой из категорий, ёмкость Склада для которых будет "
+"увеличена"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:265
@@ -3423,12 +3463,16 @@ msgstr "прэміюм-акаўнт"
 
 #: storage/templates/storage/redesign/storage.html:366
 msgctxt "storage_assets"
-msgid "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgid ""
+"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
+"отменить. Продолжить?"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
-msgid "Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию невозможно отменить. Продолжить?"
+msgid ""
+"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
+"невозможно отменить. Продолжить?"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:371
