--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-18 14:00+0300\n"
+"POT-Creation-Date: 2023-04-17 18:13+0300\n"
 "PO-Revision-Date: 2023-04-16 18:59+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1056,7 +1056,9 @@ msgstr "play as usual - and get rewards!"
 #: player/templates/player/redesign/game_event/halloween.html:219
 msgctxt "game_event"
 msgid "- с 25.10 по 1.11 заполняй прогрессию события, расходуя энергию"
-msgstr "- from 25.10 to 1.11, complete the progression of the event by spending energy"
+msgstr ""
+"- from 25.10 to 1.11, complete the progression of the event by spending "
+"energy"
 
 #: player/templates/player/redesign/game_event/halloween.html:220
 msgctxt "game_event"
@@ -1110,13 +1112,21 @@ msgstr "Personal Event Progression"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
-msgid "Заполняется расходованием энергии, как и ежедневное финансирование, и зависит только от твоих личных усилий."
-msgstr "It is filled with energy expenditure, like daily financing, and depends only on your personal efforts."
+msgid ""
+"Заполняется расходованием энергии, как и ежедневное финансирование, и "
+"зависит только от твоих личных усилий."
+msgstr ""
+"It is filled with energy expenditure, like daily financing, and depends only "
+"on your personal efforts."
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
-msgid "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один из трёх этапов зимней прогрессионой рамки аватара."
-msgstr "It will allow you to get a premium account for a comfortable game, as well as one of the three stages of the winter progression avatar frame."
+msgid ""
+"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один "
+"из трёх этапов зимней прогрессионой рамки аватара."
+msgstr ""
+"It will allow you to get a premium account for a comfortable game, as well "
+"as one of the three stages of the winter progression avatar frame."
 
 #: player/templates/player/redesign/game_event/newyear.html:395
 msgctxt "game_event"
@@ -1130,13 +1140,21 @@ msgstr "Fills with the efforts of all players on the server."
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
-msgid "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь соответствующий этап личной."
-msgstr "You will not be able to collect rewards unlocked in the general progression until you complete the corresponding stage of the personal one."
+msgid ""
+"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь "
+"соответствующий этап личной."
+msgstr ""
+"You will not be able to collect rewards unlocked in the general progression "
+"until you complete the corresponding stage of the personal one."
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
-msgid "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы получить свою награду"
-msgstr "When the next stage of the general progression is opened, spend energy to get your reward"
+msgid ""
+"Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
+"получить свою награду"
+msgstr ""
+"When the next stage of the general progression is opened, spend energy to "
+"get your reward"
 
 #: player/templates/player/redesign/lists/skill_top.html:26
 #: player/templates/player/redesign/overview_skills.html:20
@@ -1377,76 +1395,91 @@ msgstr "Skill up will be canceled. Continue cancellation?"
 msgid "Продолжить"
 msgstr "Continue"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:4
 msgctxt "repost"
 msgid "золото за репост"
 msgstr "gold for repost"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:5
 msgctxt "repost"
 msgid "поддержи проект репостом и получай золото!"
 msgstr "support the project with a repost and get gold! "
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:9
 msgctxt "repost"
 msgid "запись для репоста"
 msgstr "post for repost"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:11
 msgctxt "repost"
 msgid "перейти к записи (ссылка)"
 msgstr "go to post (link)"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:12
 msgctxt "repost"
 msgid "Для получения золота запись должна"
 msgstr "To receive gold, the entry must"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:13
 msgctxt "repost"
 msgid "быть первой сверху (или после закрепа)"
 msgstr "be first on top (or after pinning)"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:14
 msgctxt "repost"
 msgid "пробыть на стене не меньше часа"
 msgstr "stay on the wall for at least an hour"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:15
 msgctxt "repost"
 msgid "Бонус можно получить раз в сутки"
 msgstr "Bonus can be received once a day"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:19
 msgctxt "repost"
 msgid "репост не найден"
 msgstr "repost not found"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:21
 msgctxt "repost"
 msgid "репост найден"
 msgstr "repost found"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:24
 msgctxt "repost"
 msgid "Произошла ошибка API VK"
 msgstr "A VK API error has occurred"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:25
 msgctxt "repost"
 msgid "Обычно помогает повторный логин в игре"
 msgstr "Usually it helps to re-login in the game"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:26
 msgctxt "repost"
 msgid "Выйти из игры"
 msgstr "Quit"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:33
 msgctxt "repost"
 msgid "Получить"
 msgstr "Get"
 
+#. Last modified by Victor Wilhelm von Wanzleben, id 862
 #: player/templates/player/redesign/player_repost.html:48
 msgctxt "repost"
 msgid "час не прошёл"
@@ -2805,7 +2838,8 @@ msgstr ""
 #: storage/templates/storage/redesign/storage.html:193
 msgctxt "storage_transfer"
 msgid "Вы можете перенести Склад в регион текущего местоположения (один раз)"
-msgstr "You can move the Warehouse to the region of the current location (once)"
+msgstr ""
+"You can move the Warehouse to the region of the current location (once)"
 
 #: storage/templates/storage/redesign/storage.html:206
 msgctxt "storage_transfer"
@@ -2821,7 +2855,8 @@ msgstr "Warehouse upgrade"
 #: storage/templates/storage/redesign/storage.html:215
 msgctxt "storage_upgrade"
 msgid "Вы можете улучшить Склад, расширив хранилища части товаров"
-msgstr "You can improve the Warehouse by expanding inventory of a part of the goods"
+msgstr ""
+"You can improve the Warehouse by expanding inventory of a part of the goods"
 
 #: storage/templates/storage/redesign/storage.html:216
 msgctxt "storage_upgrade"
@@ -2846,8 +2881,12 @@ msgstr "Not enough materials"
 
 #: storage/templates/storage/redesign/storage.html:258
 msgctxt "storage_upgrade"
-msgid "Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена"
-msgstr "Select goods in each category for which the Warehouse capacity will be upgraded"
+msgid ""
+"Выберите товары в каждой из категорий, ёмкость Склада для которых будет "
+"увеличена"
+msgstr ""
+"Select goods in each category for which the Warehouse capacity will be "
+"upgraded"
 
 #: storage/templates/storage/redesign/storage.html:265
 msgctxt "storage_upgrade"
@@ -2881,13 +2920,21 @@ msgstr "of Premium account"
 
 #: storage/templates/storage/redesign/storage.html:366
 msgctxt "storage_assets"
-msgid "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно отменить. Продолжить?"
-msgstr "Your premium account will be renewed for one month. This operation cannot be undone. Proceed?"
+msgid ""
+"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
+"отменить. Продолжить?"
+msgstr ""
+"Your premium account will be renewed for one month. This operation cannot be "
+"undone. Proceed?"
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
-msgid "Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию невозможно отменить. Продолжить?"
-msgstr "You will activate a premium account, lasting one month. This operation cannot be undone. Proceed?"
+msgid ""
+"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
+"невозможно отменить. Продолжить?"
+msgstr ""
+"You will activate a premium account, lasting one month. This operation "
+"cannot be undone. Proceed?"
 
 #: storage/templates/storage/redesign/storage.html:371
 msgctxt "storage_assets"
