--- a/locale/id/LC_MESSAGES/django.po
+++ b/locale/id/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-18 14:00+0300\n"
+"POT-Creation-Date: 2023-04-17 18:13+0300\n"
 "PO-Revision-Date: 2022-12-01 16:31+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1299,7 +1299,9 @@ msgstr "mainkan dan dapatkan hadiahnya!"
 #: player/templates/player/redesign/game_event/halloween.html:219
 msgctxt "game_event"
 msgid "- с 25.10 по 1.11 заполняй прогрессию события, расходуя энергию"
-msgstr "- dari tanggal 25.10 hingga 1.11, selesaikan kemajuan event dengan cara mennggunakan energi"
+msgstr ""
+"- dari tanggal 25.10 hingga 1.11, selesaikan kemajuan event dengan cara "
+"mennggunakan energi"
 
 #: player/templates/player/redesign/game_event/halloween.html:220
 msgctxt "game_event"
@@ -1365,12 +1367,16 @@ msgstr "Hadiah:"
 
 #: player/templates/player/redesign/game_event/newyear.html:393
 msgctxt "game_event"
-msgid "Заполняется расходованием энергии, как и ежедневное финансирование, и зависит только от твоих личных усилий."
+msgid ""
+"Заполняется расходованием энергии, как и ежедневное финансирование, и "
+"зависит только от твоих личных усилий."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:394
 msgctxt "game_event"
-msgid "Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один из трёх этапов зимней прогрессионой рамки аватара."
+msgid ""
+"Она позволит получить тебе премиум-аккаунт для комфортной игры, а также один "
+"из трёх этапов зимней прогрессионой рамки аватара."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:395
@@ -1388,12 +1394,16 @@ msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:397
 msgctxt "game_event"
-msgid "Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь соответствующий этап личной."
+msgid ""
+"Ты не сможешь собрать награды, открытые в общей прогрессии, пока не пройдёшь "
+"соответствующий этап личной."
 msgstr ""
 
 #: player/templates/player/redesign/game_event/newyear.html:398
 msgctxt "game_event"
-msgid "Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы получить свою награду"
+msgid ""
+"Когда будет открыт очередной этап общей прогрессии, потрать энергию, чтобы "
+"получить свою награду"
 msgstr ""
 
 #: player/templates/player/redesign/lists/skill_top.html:26
@@ -2484,17 +2494,20 @@ msgstr "Energi tidak cukup"
 #: region/views/do_mining.py:101
 msgctxt "mining"
 msgid "Запасов золота в регионе недостаточно для добычи"
-msgstr "Sumber daya emas di wilayah ini tidak cukup untuk melakukan penambangan"
+msgstr ""
+"Sumber daya emas di wilayah ini tidak cukup untuk melakukan penambangan"
 
 #: region/views/do_mining.py:121
 msgctxt "mining"
 msgid "Запасов нефти в регионе недостаточно для добычи"
-msgstr "Sumber daya minyak di wilayah ini tidak cukup untuk melakukan penambangan"
+msgstr ""
+"Sumber daya minyak di wilayah ini tidak cukup untuk melakukan penambangan"
 
 #: region/views/do_mining.py:175
 msgctxt "mining"
 msgid "Запасов руды в регионе недостаточно для добычи"
-msgstr "Sumber daya mineral di wilayah ini tidak cukup untuk melakukan penambangan"
+msgstr ""
+"Sumber daya mineral di wilayah ini tidak cukup untuk melakukan penambangan"
 
 #: region/views/lists/world_regions.py:90
 msgid "Регионы игры"
@@ -3334,7 +3347,9 @@ msgstr "Energi tidak cukup"
 
 #: storage/templates/storage/redesign/storage.html:258
 msgctxt "storage_upgrade"
-msgid "Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена"
+msgid ""
+"Выберите товары в каждой из категорий, ёмкость Склада для которых будет "
+"увеличена"
 msgstr ""
 
 #: storage/templates/storage/redesign/storage.html:265
@@ -3369,13 +3384,21 @@ msgstr "akun premium"
 
 #: storage/templates/storage/redesign/storage.html:366
 msgctxt "storage_assets"
-msgid "Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно отменить. Продолжить?"
-msgstr "Akun premium -mu akan diperbarui selama satu bulan. Tindakan ini tidak dapat dibatalkan. Lanjutkan?"
+msgid ""
+"Ваш премиум-аккаунт будет продлён на один месяц. Данную операцию невозможно "
+"отменить. Продолжить?"
+msgstr ""
+"Akun premium -mu akan diperbarui selama satu bulan. Tindakan ini tidak dapat "
+"dibatalkan. Lanjutkan?"
 
 #: storage/templates/storage/redesign/storage.html:368
 msgctxt "storage_assets"
-msgid "Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию невозможно отменить. Продолжить?"
-msgstr "Kamu akan mengaktifkan akun premium selama satu bulan. Tindakan ini tidak dapat dibatalkan. Lanjutkan?"
+msgid ""
+"Вы активируете премиум-аккаунт, длительностью один месяц. Данную операцию "
+"невозможно отменить. Продолжить?"
+msgstr ""
+"Kamu akan mengaktifkan akun premium selama satu bulan. Tindakan ini tidak "
+"dapat dibatalkan. Lanjutkan?"
 
 #: storage/templates/storage/redesign/storage.html:371
 msgctxt "storage_assets"
@@ -4064,7 +4087,8 @@ msgstr ""
 #| msgid "Запасов золота в регионе недостаточно для добычи"
 msgctxt "w_trading"
 msgid "В торговом предложении недостаточно средств"
-msgstr "Sumber daya emas di wilayah ini tidak cukup untuk melakukan penambangan"
+msgstr ""
+"Sumber daya emas di wilayah ini tidak cukup untuk melakukan penambangan"
 
 #: storage/views/trading/accept_offer.py:302
 #: storage/views/trading/premium_trading.py:118
@@ -4073,7 +4097,8 @@ msgstr "Sumber daya emas di wilayah ini tidak cukup untuk melakukan penambangan"
 #| msgid "Запасов золота в регионе недостаточно для добычи"
 msgctxt "w_trading"
 msgid "В связанной блокировке недостаточно средств"
-msgstr "Sumber daya emas di wilayah ini tidak cukup untuk melakukan penambangan"
+msgstr ""
+"Sumber daya emas di wilayah ini tidak cukup untuk melakukan penambangan"
 
 #: storage/views/trading/accept_offer.py:323
 msgctxt "w_trading"
